@@ -1,3 +1,5 @@
 Tech giants are rapidly integrating AI into core products, promising a new era of intelligent user experiences and productivity.
 [2025-12-28] Why do programmers prefer dark mode? Because light attracts bugs.
 [2025-12-29] Why do programmers prefer dark mode? Because light attracts bugs.
+[2025-12-29] Cache invalidation is still undefeated.
+[2025-12-29] Why do programmers prefer dark mode? Because light attracts bugs.
