@@ -1,11 +1,17 @@
 import fs from "fs";
 import "dotenv/config";
-import { GoogleGenAI } from "@google/genai";
 import fetch from "node-fetch";
+import { GoogleGenAI } from "@google/genai";
+import { Groq } from "groq-sdk";
 
 // Check API keys
-if (!process.env.GEMINI_API_KEY && !process.env.GROQ_API_KEY) {
-  console.error("Missing GEMINI_API_KEY and GROQ_API_KEY");
+if (
+  !process.env.GROQ_API_KEY &&
+  !process.env.GEMINI_API_KEY &&
+  !process.env.NEWS_API_KEY &&
+  !process.env.NEWS_API_KEY_2
+) {
+  console.error(" Missing API keys");
   process.exit(1);
 }
 
@@ -13,10 +19,18 @@ if (!process.env.GEMINI_API_KEY && !process.env.GROQ_API_KEY) {
 const today = new Date();
 const dateStr = today.toISOString().split("T")[0];
 
-const yesterday = new Date(today);
-yesterday.setDate(today.getDate() - 1);
-const yesterdayStr = yesterday.toISOString().split("T")[0];
-
+/* ===================== CATEGORY ROTATION ===================== */
+const CATEGORY_ROTATION = [
+  "business",
+  "entertainment",
+  "general",
+  "health",
+  "science",
+  "sports",
+  "technology",
+];
+const category = CATEGORY_ROTATION[today.getDay()];
+const useGNews = today.getDate() % 2 === 0;
 /* -------------------- helpers -------------------- */
 
 function getLastLine(file) {
@@ -47,8 +61,7 @@ function wrapText(text, maxChars = 90) {
 
 function writeSvg(filename, title, content, accent) {
   const lines = wrapText(content);
-  const height = 60 + lines.length * 22;
-
+  const height = 70 + lines.length * 22;
   const textLines = lines
     .map((l, i) => `<text x="20" y="${60 + i * 22}" class="text">${escapeSvg(l)}</text>`)
     .join("\n");
@@ -72,10 +85,32 @@ function writeSvg(filename, title, content, accent) {
 }
 
 /* -------------------- AI Providers -------------------- */
+const groq = process.env.GROQ_API_KEY ? new Groq({ apiKey: process.env.GROQ_API_KEY }) : null;
+const geminiAI = process.env.GEMINI_API_KEY 
+? new GoogleGenAI({ apiKey: process.env.GEMINI_API_KEY }) 
+: null;
 
-const geminiAI = process.env.GEMINI_API_KEY
-  ? new GoogleGenAI({ apiKey: process.env.GEMINI_API_KEY })
-  : null;
+async function generateGroq(prompt) {
+  if (!groq) throw new Error("No GROQ key");
+
+  const chatCompletion = await groq.chat.completions.create({
+    messages: [{ role: "user", content: prompt }],
+    model: "openai/gpt-oss-120b",
+    temperature: 1,
+    max_completion_tokens: 8192,
+    top_p: 1,
+    stream: true,
+    reasoning_effort: "medium",
+  });
+
+  let result = "";
+  for await (const chunk of chatCompletion) {
+    result += chunk.choices[0]?.delta?.content || "";
+  }
+
+  if (!result) throw new Error("Empty Groq response");
+  return result.replace(/\n/g, " ");
+}
 
 async function generateGemini(prompt) {
   if (!geminiAI) throw new Error("No GEMINI key");
@@ -88,70 +123,75 @@ async function generateGemini(prompt) {
   return text.replace(/\n/g, " ");
 }
 
-async function generateGroq(prompt) {
-  if (!process.env.GROQ_API_KEY) throw new Error("No GROQ key");
-  const res = await fetch("https://api.groq.ai/v1/completions", {
-    method: "POST",
-    headers: {
-      Authorization: `Bearer ${process.env.GROQ_API_KEY}`,
-      "Content-Type": "application/json",
-    },
-    body: JSON.stringify({
-      model: process.env.GROQ_MODEL || "llama-3.1-8b-instant",
-      prompt,
-      max_output_tokens: 128,
-    }),
-  });
-  const data = await res.json();
-  const text = data?.output_text?.trim();
-  if (!text) throw new Error("Empty Groq response");
-  return text.replace(/\n/g, " ");
-}
-
-async function generateWithFallback(prompt, localFallback) {
+async function generateWithFallback(prompt) {
   try {
-    return await generateGemini(prompt);
-  } catch (e1) {
-    console.warn("⚠️ Gemini failed:", e1.message);
-    try {
-      return await generateGroq(prompt);
-    } catch (e2) {
-      console.warn("⚠️ Groq failed:", e2.message);
-      const fallback = localFallback[Math.floor(Math.random() * localFallback.length)];
-      console.warn("Using local fallback:", fallback);
-      return fallback;
-    }
+    return await generateGroq(prompt);
+  } catch (e) {
+    console.warn(" Groq failed:", e.message);
+    if (geminiAI) return await generateGemini(prompt);
+    throw e;
   }
 }
 
+/* ===================== NEWS FETCHERS ===================== */
+async function fetchNewsAPI(category) {
+  if (!process.env.NEWS_API_KEY) throw new Error("No NewsAPI");
+  const url = `https://newsapi.org/v2/top-headlines?category=${category}&language=en&pageSize=1&apiKey=${process.env.NEWS_API_KEY}`;
+  const res = await fetch(url);
+  const data = await res.json();
+  return data?.articles?.[0]?.title;
+}
+
+async function fetchGNews(category) {
+  if (!process.env.NEWS_API_KEY_2) throw new Error("No GNews");
+  const url = `https://gnews.io/api/v4/top-headlines?category=${category}&lang=en&max=1&apikey=${process.env.NEWS_API_KEY_2}`;
+  const res = await fetch(url);
+  const data = await res.json();
+  return data?.articles?.[0]?.title;
+}
+
 /* -------------------- Main -------------------- */
-
 async function main() {
-  const jokeFallbacks = [
-    "Why do programmers prefer dark mode? Because light attracts bugs.",
-    "A programmer walks into a bar and orders 1.000000119 beers.",
-    "There are only two hard things in computer science: cache invalidation and naming things.",
-  ];
+  const jokePrompt = "Tell me a short random joke. One sentence.";
 
-  const newsFallbacks = [
-    "Tech company announces AI breakthrough, quietly ships more bugs.",
-    "Major platform promises performance improvements, users remain skeptical.",
-    "Developers celebrate new framework, rewrite everything again.",
-  ];
+  let headline;
+  try {
+    headline = useGNews ? await fetchGNews(category) : await fetchNewsAPI(category);
+  } catch (e) {
+    console.error("News fetch error:", e);
+    process.exit(1);
+  }
 
-  const jokePrompt = "Tell me a short programming joke. One sentence.";
-  const newsPrompt = `Summarize the biggest technology news from ${yesterdayStr} in one sentence. Neutral tone. No emojis.`;
+  const reactionPrompt = `
+React to this headline like a mildly tired but witty developer.
+One sentence. Slight sarcasm. No emojis.
 
-  const joke = await generateWithFallback(jokePrompt, jokeFallbacks);
-  const news = await generateWithFallback(newsPrompt, newsFallbacks);
+"${headline}"
+`;
+
+  const joke = await generateWithFallback(jokePrompt);
+  const reaction = await generateWithFallback(reactionPrompt);
 
   fs.appendFileSync("jokes.txt", `[${dateStr}] ${joke}\n`);
-  fs.appendFileSync("news.txt", `[${dateStr}] ${news}\n`);
+  fs.appendFileSync("news.txt", `[${dateStr}] [${category.toUpperCase()}] ${headline}\n`);
+  fs.writeFileSync("reaction.txt", reaction);
+
+  const categoryColors = {
+    business: "#ff9f1a",
+    entertainment: "#ff3f7f",
+    general: "#58a6ff",
+    health: "#1dd3b0",
+    science: "#9b5de5",
+    sports: "#ff6b6b",
+    technology: "#f5c518",
+  };
 
   writeSvg("joke.svg", "Daily Joke", getLastLine("jokes.txt"), "#3fb950");
-  writeSvg("news.svg", "Daily Tech News", getLastLine("news.txt"), "#58a6ff");
+  writeSvg("news.svg", "Daily News", headline, categoryColors[category] || "#58a6ff");
 
-  console.log(`Joke: ${joke} | News: ${news}`);
+  console.log("Joke:", joke);
+  console.log("Headline:", headline);
+  console.log("Reaction:", reaction);
 }
 
 main().catch((err) => {
