@@ -5,6 +5,7 @@
   "dependencies": {
     "@google/genai": "^1.34.0",
     "dotenv": "^17.2.3",
+    "groq-sdk": "^0.37.0",
     "node-fetch": "^3.3.2"
   }
 }
