@@ -1,0 +1,1 @@
+Great, because nothing says “relaxing Sunday” like another festering patch that blooms just in time to ruin my coffee‑powered debugging session.
