@@ -1,3 +1,5 @@
 Tech giants are rapidly integrating AI into core products, promising a new era of intelligent user experiences and productivity.
 [2025-12-28] Developers celebrate new framework, rewrite everything again.
 [2025-12-29] Major platform promises performance improvements, users remain skeptical.
+[2025-12-29] [ENTERTAINMENT] Developers celebrate new tool, rewrite everything again.
+[2025-12-29] [ENTERTAINMENT] Sunday Preview – A putrescent crop begins to bloom - Warhammer Community
